tests/ui/traits/next-solver/overflow/recursive-self-normalization-2.stderr
error[E0277]: the trait bound `<T as Foo2>::Assoc2: Bar` is not satisfied
  --> $DIR/recursive-self-normalization-2.rs:15:17
   |
LL |     needs_bar::<T::Assoc1>();
   |                 ^^^^^^^^^ the trait `Bar` is not implemented for `<T as Foo2>::Assoc2`
   |
note: required by a bound in `needs_bar`
  --> $DIR/recursive-self-normalization-2.rs:12:17
   |
LL | fn needs_bar<S: Bar>() {}
   |                 ^^^ required by this bound in `needs_bar`
help: consider further restricting the associated type
   |
LL | fn test<T: Foo1<Assoc1 = <T as Foo2>::Assoc2> + Foo2<Assoc2 = <T as Foo1>::Assoc1>>() where <T as Foo2>::Assoc2: Bar {
   |                                                                                       ++++++++++++++++++++++++++++++

error[E0277]: the size for values of type `<T as Foo2>::Assoc2` cannot be known at compilation time
  --> $DIR/recursive-self-normalization-2.rs:15:17
   |
LL |     needs_bar::<T::Assoc1>();
   |                 ^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `<T as Foo2>::Assoc2`
note: required by an implicit `Sized` bound in `needs_bar`
  --> $DIR/recursive-self-normalization-2.rs:12:14
   |
LL | fn needs_bar<S: Bar>() {}
   |              ^ required by the implicit `Sized` requirement on this type parameter in `needs_bar`
help: consider further restricting the associated type
   |
LL | fn test<T: Foo1<Assoc1 = <T as Foo2>::Assoc2> + Foo2<Assoc2 = <T as Foo1>::Assoc1>>() where <T as Foo2>::Assoc2: Sized {
   |                                                                                       ++++++++++++++++++++++++++++++++
help: consider relaxing the implicit `Sized` restriction
   |
LL | fn needs_bar<S: Bar + ?Sized>() {}
   |                     ++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
